2009-12-31  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Reverse using simple_move_if_change_rule for cruft.def
	which interferes with make timestamp algorithm.

2009-12-19  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Eliminate TOPDIR variable in favor of built-in automake
	variables of top_builddir and top_srcdir.

2009-12-13  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Use simple_move_if_change_rule for cruft.def to eliminate
	unnecessary compilations.

2009-12-07  John W. Eaton  <jwe@octave.org>

	* misc/f77-fcn.h, misc/lo-error.h, misc/quit.h,
	misc/f77-extern.cc, misc/quit.cc, misc/cquit.c, misc/f77-fcn.c,
	misc/lo-error.c: Remove Emacs local variable list.

2009-12-07  John W. Eaton  <jwe@octave.org>

	* misc/cquit.c, misc/f77-fcn.h, misc/quit.h: Untabify.

2009-12-03  John W. Eaton  <jwe@octave.org>

	* Makefile.am (DISTCLEANFILES): New variable.

2009-11-26  Jaroslav Hajek  <highegg@gmail.com>

	* blas-xtra/sdot3.f: Use nested cache-aligned loop for general case.
	* blas-xtra/ddot3.f: Ditto.
	* blas-xtra/cdotc3.f: Ditto.
	* blas-xtra/zdotc3.f: Ditto.

2009-11-26  Jaroslav Hajek  <highegg@gmail.com>

	* blas-xtra/sdot3.f: New source.
	* blas-xtra/ddot3.f: New source.
	* blas-xtra/cdotc3.f: New source.
	* blas-xtra/zdotc3.f: New source.
	* blas-xtra/smatm3.f: New source.
	* blas-xtra/dmatm3.f: New source.
	* blas-xtra/cmatm3.f: New source.
	* blas-xtra/zmatm3.f: New source.
	* blas-xtra/module.mk: Include them.

2009-11-17  John W. Eaton  <jwe@octave.org>

	* mkf77def.in: Only process files with names that match *.f.

2009-11-13  John W. Eaton  <jwe@octave.org>

	* Makefile.am: Restore rules for building cruft.def.
	(libcruft_la_LDFLAGS): Also append @XTRA_CRUFT_SH_LDFLAGS@.
	(libcruft_la_DEPENDENCIES): New variable.
	* mkf77def.in: Use @VAR@ instead of %VAR% substitutions.
	Process	srcdir plus list of files instead of working as a filter.

2009-11-13  John W. Eaton  <jwe@octave.org>

	* Makefile.am (libcruft_la_CPPFLAGS): Define.
