@@ -1,3 +1,8 @@
+2010-01-05  John W. Eaton  <jwe@octave.org>
+
+	* Makefile.am (AM_CPPFLAGS): Include @CPPFLAGS@ and -I../libgnu
+	in the list.
+
 2009-12-30  Jaroslav Hajek  <highegg@gmail.com>
 
 	* idx-vector.cc (idx_vector::maybe_reduce): Implement reduction rule
