@@ -1,3 +1,7 @@
+2010-01-05  John W. Eaton  <jwe@octave.org>
+
+	* Makefile.am (AM_CPPFLAGS): New variable.
+
 2009-12-31  Rik <octave@nomad.inbox5.com>
 
 	* Makefile.am: Reverse using simple_move_if_change_rule for cruft.def
